Refactor names issue#74

--- a/src/app/shop/customer-discount/customer-discount-dialog.component.html
+++ b/src/app/shop/customer-discount/customer-discount-dialog.component.html
@@ -10,7 +10,7 @@
   </mat-form-field>
   <mat-form-field class="full-width">
     <mat-label>Minimmun Purchase</mat-label>
-    <input [(ngModel)]="customerDiscount.minimmumPurchase" matInput required type="number">
+    <input [(ngModel)]="customerDiscount.minimumPurchase" matInput required type="number">
   </mat-form-field>
   <mat-form-field class="full-width">
     <mat-label>User</mat-label>
