--- a/src/app/shop/customer-discount/customer-discount.component.html
+++ b/src/app/shop/customer-discount/customer-discount.component.html
@@ -16,7 +16,7 @@
     <mat-form-field>
       <mat-label>Minimmum Purchase</mat-label>
       <label>
-        <input [(ngModel)]="customerDiscount.minimmumPurchase" matInput>
+        <input [(ngModel)]="customerDiscount.minimumPurchase" matInput>
       </label>
     </mat-form-field>
     <mat-form-field>
