--- a/src/app/shop/cashier-opened/cashier-closure/cashier-closure.component.html
+++ b/src/app/shop/cashier-opened/cashier-closure/cashier-closure.component.html
@@ -1,12 +1,12 @@
 <mat-form-field appearance="fill">
   <mat-label>Fecha de inicio</mat-label>
-  <input matInput [matDatepicker]="picker">
+  <input [(ngModel)]="beginDate" matInput [matDatepicker]="picker">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
 </mat-form-field>
 <mat-form-field appearance="fill">
   <mat-label>Fecha de fin</mat-label>
-  <input matInput [matDatepicker]="picker2">
+  <input [(ngModel)]="endDate" matInput [matDatepicker]="picker2">
   <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
   <mat-datepicker #picker2></mat-datepicker>
 </mat-form-field>
