Added Added Reset search in Cashier Closure, Close button in Cashier Movement Dialog and readonly date fields in Cashier Closure issue #114

--- a/src/app/shop/cashier-opened/cash-movements/cash-movement-dialog/cash-movement-dialog.component.html
+++ b/src/app/shop/cashier-opened/cash-movements/cash-movement-dialog/cash-movement-dialog.component.html
@@ -10,6 +10,7 @@
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
+  <button mat-dialog-close mat-raised-button>Cancel</button>
   <button (click)="cashIn()" color="primary" mat-raised-button>
     <mat-icon>account_balance_wallet</mat-icon>
     <span>Cash In</span>
