Repaired movements dialog to correct endpoints issue #114

--- a/src/app/shop/cashier-opened/cash-movements/cash-movement-dialog/cash-movement-dialog.component.html
+++ b/src/app/shop/cashier-opened/cash-movements/cash-movement-dialog/cash-movement-dialog.component.html
@@ -2,7 +2,7 @@
 <mat-dialog-content>
   <mat-form-field>
     <label>
-      <input [(ngModel)]="cashFinal.deposit" matInput
+      <input [(ngModel)]="cashFinal.amount" matInput
              placeholder="Remove or Add cash (€)"
              required
              type="number"/>
