updated UI issues #45

--- a/src/app/shop/issues/issues.component.html
+++ b/src/app/shop/issues/issues.component.html
@@ -31,7 +31,7 @@
     </mat-form-field>
     <mat-form-field>
       <mat-label>Assignee</mat-label>
-      <input [(ngModel)]="issueSearch.assignee" matInput>
+      <input [(ngModel)]="issueSearch.assignee" placeholder="Full nickname" matInput>
     </mat-form-field>
     <button (click)="search()" mat-icon-button>
       <mat-icon>search</mat-icon>
