implemented endpoint ticket-tracking #125

--- a/src/app/home/ticket-tracking/product/product.component.css
+++ b/src/app/home/ticket-tracking/product/product.component.css
@@ -2,18 +2,18 @@
   margin: 5px;
 }
 
-.committed {
+.COMMITTED {
   background: darkseagreen;
 }
 
-.not_committed {
-    background: cornflowerblue;
+.NOT_COMMITTED {
+  background: cornflowerblue;
 }
 
-.require_provider {
+.REQUIRE_PROVIDER {
   background: indianred;
 }
 
-.in_stock {
+.IN_STOCK {
   background: lightyellow;
 }
