--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -84,7 +84,7 @@
     <mat-icon>shopping_basket</mat-icon>
     <span>Online Orders</span>
   </button>
-  <button disabled="disabled" mat-menu-item routerLink="">
+  <button disabled="disabled" mat-menu-item routerLink="/home/ticket-tracking/FGhfv521Rj6iKmzp5aERAA">
     <mat-icon>playlist_add_check</mat-icon>
     <span>Ticket tracking</span>
   </button>
