--- a/src/app/shop/cashier-opened/cashier-closure/cashier-closure.component.html
+++ b/src/app/shop/cashier-opened/cashier-closure/cashier-closure.component.html
@@ -16,7 +16,36 @@
 <button (click)="resetSearch()" mat-icon-button>
   <mat-icon>close</mat-icon>
 </button>
-<app-crud [data]="totals" [readAction]="false" [deleteAction]="false" [createAction]="false" [updateAction]="false"
-          [title]="title2"></app-crud>
+<mat-card>
+  <mat-card-title>{{title2}}</mat-card-title>
+</mat-card>
+<table>
+  <thead>
+  <tr>
+    <th>Initial Cash</th>
+    <th>Cash Sales</th>
+    <th>Card Sales</th>
+    <th>Used Vouchers</th>
+    <th>Deposit</th>
+    <th>Withdrawal</th>
+    <th>Lost Card</th>
+    <th>Lost Cash</th>
+    <th>Final Cash</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td> {{(totals | async)?.initialCash | number:'1.0-2'}}</td>
+    <td> {{(totals | async)?.cashSales | number:'1.0-2'}}</td>
+    <td> {{(totals | async)?.cardSales | number:'1.0-2'}}</td>
+    <td> {{(totals | async)?.usedVouchers | number:'1.0-2'}}</td>
+    <td> {{(totals | async)?.deposit | number:'1.0-2'}}</td>
+    <td> {{(totals | async)?.withdrawal | number:'1.0-2'}}</td>
+    <td> {{(totals | async)?.lostCard | number:'1.0-2'}}</td>
+    <td> {{(totals | async)?.lostCash | number:'1.0-2'}}</td>
+    <td> {{(totals | async)?.finalCash | number:'1.0-2'}}</td>
+  </tr>
+  </tbody>
+</table>
 <app-crud [data]="cashiers" [readAction]="false" [deleteAction]="false" [createAction]="false" [updateAction]="false"
           [title]="title"></app-crud>
