--- a/src/app/home/complaints/complaints.component.html
+++ b/src/app/home/complaints/complaints.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-content>
     <button (click)="searchAll()" mat-icon-button>
-      <span>Search All</span>
+      <span>Search Your Complaints</span>
       <mat-icon>search</mat-icon>
     </button>
   </mat-card-content>
