--- a/src/app/home/stock-management/stock-management.component.html
+++ b/src/app/home/stock-management/stock-management.component.html
@@ -102,12 +102,19 @@
     <mat-card-content>
       <mat-form-field>
         <mat-label>Enter a barcode</mat-label>
-        <input [(ngModel)]="stockArticle.barcode" matInput type="number">
+        <input [(ngModel)]="barcodeEmpty" matInput type="number">
       </mat-form-field>
       <button (click)="searchEmptyStock()" mat-icon-button>
         <mat-icon>search</mat-icon>
       </button>
     </mat-card-content>
+    <ng-container *ngIf="stockEmptyError">
+      <mat-card>
+        <mat-card-content>
+          <mat-label class="error"><strong>Barcode no válido</strong></mat-label>
+        </mat-card-content>
+      </mat-card>
+    </ng-container>
     <ng-container *ngIf="stockEmpty">
       <mat-card>
         <mat-card-content>
