Fixed visibility in carousel #101

--- a/src/app/home/adviser/popular/popular.component.html
+++ b/src/app/home/adviser/popular/popular.component.html
@@ -1,1 +1,2 @@
 <app-adviser (add)="addArticle($event)" [articles]="popularArticles"></app-adviser>
+<p [hidden]="true">{{popularArticles[0].barcode}}</p>
