Correct route stock manager #153

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -140,7 +140,7 @@
     <mat-icon>alarm</mat-icon>
     <span>Stock Alarm</span>
   </button>
-  <button mat-menu-item routerLink="/home/stock-management">
+  <button mat-menu-item routerLink="/shop/stock-management">
     <mat-icon>equalizer</mat-icon>
     <span>Stock Management</span>
   </button>
