forgotten-password.component updated #112

--- a/src/app/home/forgotten-password/forgotten-password.component.html
+++ b/src/app/home/forgotten-password/forgotten-password.component.html
@@ -1,4 +1,4 @@
-<div class="example-container">
+<div class="example-container"  *ngIf="email">
   <mat-form-field appearance="fill">
     <mat-label>Enter your password</mat-label>
     <input matInput [(ngModel)]="newPassword" placeholder="newPassword" [type]="hide1 ? 'password' : 'text'" type="password" required>
