--- a/src/app/shop/stock-alarms/stock-alarm-chip/stock-alarm-chip.component.html
+++ b/src/app/shop/stock-alarms/stock-alarm-chip/stock-alarm-chip.component.html
@@ -5,18 +5,21 @@
         <div>BC: {{data.barcode}}</div>
         <div>STK: {{data.stock}} </div>
         <div>
-          <button (click)="click()" class="close" mat-mini-fab aria-label="Example icon-button with a heart icon">
+          <button *ngIf="isEditable" (click)="click()" class="close" mat-mini-fab
+                  aria-label="Example icon-button with a heart icon">
             <mat-icon class="min-icon">close</mat-icon>
           </button>
         </div>
       </div>
       <div class="flex-column">
         <div>
-          <input [(ngModel)]="data.warning" placeholder="Warning" class="warning" (change)="changeWarning()"
+          <input [(ngModel)]="data.warning" [readOnly]="!isEditable" placeholder="Warning" class="warning"
+                 (change)="changeWarning()"
                  [value]="data.warning?data.warning:''"/>
         </div>
         <div>
-          <input [(ngModel)]="data.critical" placeholder="Critical" class="critical" (change)="changeCritical()"
+          <input [(ngModel)]="data.critical" [readOnly]="!isEditable" placeholder="Critical" class="critical"
+                 (change)="changeCritical()"
                  [value]="data.critical?data.critical:'' "/>
         </div>
       </div>
