--- a/src/app/shop/budgets/search-by-budgets.component.html
+++ b/src/app/shop/budgets/search-by-budgets.component.html
@@ -1,3 +1,3 @@
-<app-search (renew)="searchByBudget()" (selected)="onSelect($event)" [(key)]="budget" [keys]="budgets"
+<app-search (renew)="searchByBudget()" (selected)="onSelect($event)" [(key)]="reference" [keys]="references"
             title="Budget">
 </app-search>
