--- a/src/app/shop/stock-management/table-stock/table-stock.component.html
+++ b/src/app/shop/stock-management/table-stock/table-stock.component.html
@@ -1,31 +1,32 @@
 <table mat-table [dataSource]="data" class="mat-elevation-z8">
+  <caption>Stock Manager</caption>
   <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No.</th>
-    <td mat-cell *matCellDef="let i = index"> {{i + 1}}</td>
+    <th scope="col" mat-header-cell *matHeaderCellDef> No.</th>
+    <td  mat-cell *matCellDef="let i = index"> {{i + 1}}</td>
   </ng-container>
   <ng-container matColumnDef="barcode">
-    <th mat-header-cell *matHeaderCellDef> Barcode</th>
-    <td mat-cell *matCellDef="let element"> {{element.barcode}} </td>
+    <th scope="col" mat-header-cell *matHeaderCellDef> Barcode</th>
+    <td  mat-cell *matCellDef="let element"> {{element.barcode}} </td>
   </ng-container>
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef> Description</th>
+    <th scope="col" mat-header-cell *matHeaderCellDef> Description</th>
     <td mat-cell *matCellDef="let element"> {{element.description}} </td>
   </ng-container>
   <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef> Price</th>
-    <td mat-cell *matCellDef="let element"> {{element.retailPrice}} </td>
+    <th scope="col" mat-header-cell *matHeaderCellDef> Price</th>
+    <td  mat-cell *matCellDef="let element"> {{element.retailPrice}} </td>
   </ng-container>
   <ng-container *ngIf="productSold">
     <ng-container matColumnDef="dateSell">
-      <th mat-header-cell *matHeaderCellDef> Sale date</th>
-      <td mat-cell *matCellDef="let element"> {{element.dateSell}} </td>
+      <th scope="col" mat-header-cell *matHeaderCellDef> Sale date</th>
+      <td  mat-cell *matCellDef="let element"> {{element.dateSell}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumnsProductsSold"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumnsProductsSold;"></tr>
   </ng-container>
   <ng-container *ngIf="stock">
     <ng-container matColumnDef="stock">
-      <th mat-header-cell *matHeaderCellDef> Stock</th>
+      <th scope="col" mat-header-cell *matHeaderCellDef> Stock</th>
       <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
