issue#169 call endpoints

--- a/src/app/shop/staff/components/staff-report/staff-report.component.html
+++ b/src/app/shop/staff/components/staff-report/staff-report.component.html
@@ -4,18 +4,18 @@
     <mat-form-field>
       <mat-label>Filtrar por:</mat-label>
       <select [(ngModel)]="month" matNativeControl>
-        <option value="enero">Enero</option>
-        <option value="febrero">Febrero</option>
-        <option value="marzo">Marzo</option>
-        <option value="abril">Abril</option>
-        <option value="mayo">Mayo</option>
-        <option value="junio">Junio</option>
-        <option value="julio">Julio</option>
-        <option value="agosto">Agosto</option>
-        <option value="septiembre">Septiembre</option>
-        <option value="octubre">Octubre</option>
-        <option value="noviembre">Noviembre</option>
-        <option value="diciembre">Diciembre</option>
+        <option value="JANUARY">Enero</option>
+        <option value="FEBRUARY">Febrero</option>
+        <option value="MARCH">Marzo</option>
+        <option value="APRIL">Abril</option>
+        <option value="MAY">Mayo</option>
+        <option value="JUNE">Junio</option>
+        <option value="JULY">Julio</option>
+        <option value="AUGUST">Agosto</option>
+        <option value="SEPTEMBER">Septiembre</option>
+        <option value="OCTOBER">Octubre</option>
+        <option value="NOVEMBER">Noviembre</option>
+        <option value="DECEMBER">Diciembre</option>
       </select>
     </mat-form-field>
     <button (click)="search()" mat-icon-button>
