#80 added user checkout ticket management

--- a/src/app/shop/users/components/users-management.component.html
+++ b/src/app/shop/users/components/users-management.component.html
@@ -1,6 +1,6 @@
 <main class="flex-container">
   <mat-card>
-    <p><button mat-button color="primary" (click)="createUser()">Add User</button></p>
+    <p><button mat-raised-button color="primary" [disabled] ="!isAdmin()" (click)="createUser()">Add User</button></p>
     <mat-card-content>
       <app-crud (update)="updateUser($event)"  (delete)="deleteUser($event)" (read)="readUser($event)" [data]="data" [readAction]="true" [createAction]="false" [deleteAction]="true" [title] = "'Users Management'"></app-crud>
     </mat-card-content>
