--- a/src/app/shared/dialogs/register-dialog.component.html
+++ b/src/app/shared/dialogs/register-dialog.component.html
@@ -17,7 +17,7 @@
     </button>
   </mat-form-field>
   <mat-form-field>
-    <input [(ngModel)]="user.familyName" matInput placeholder="Family name" type="text" required/>
+    <input [(ngModel)]="user.familyName" matInput placeholder="Family name" type="text"/>
     <button (click)="user.familyName=undefined" *ngIf="user.familyName" aria-label="Clear" cdkFocusInitial mat-button mat-icon-button
             matSuffix>
       <mat-icon>close</mat-icon>
@@ -31,14 +31,14 @@
     </button>
   </mat-form-field>
   <mat-form-field>
-    <input [(ngModel)]="user.dni" matInput placeholder="DNI" type="text" required/>
+    <input [(ngModel)]="user.dni" matInput placeholder="DNI" type="text"/>
     <button (click)="user.dni=undefined" *ngIf="user.dni" aria-label="Clear" cdkFocusInitial mat-button mat-icon-button
             matSuffix>
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field>
   <mat-form-field>
-    <input [(ngModel)]="user.address" matInput placeholder="Address" type="text" required/>
+    <input [(ngModel)]="user.address" matInput placeholder="Address" type="text"/>
     <button (click)="user.address=undefined" *ngIf="user.address" aria-label="Clear" cdkFocusInitial mat-button mat-icon-button
             matSuffix>
       <mat-icon>close</mat-icon>
