--- a/src/app/home/online-order/online-order.component.html
+++ b/src/app/home/online-order/online-order.component.html
@@ -4,22 +4,27 @@
     Online Orders
   </mat-card-title>
 
-  <mat-grid-list>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <mat-grid-list cols="4">
+    <table mat-table [dataSource]="onlineOrders" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="reference">
+        <th mat-header-cell *matHeaderCellDef> Reference </th>
+        <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.reference}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="state">
+        <th mat-header-cell *matHeaderCellDef> State </th>
+        <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.state}}</td>
+      </ng-container>
 
       <ng-container matColumnDef="deliveryDate">
         <th mat-header-cell *matHeaderCellDef> Delivery Date </th>
         <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.deliveryDate}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="totalPayed">
-        <th mat-header-cell *matHeaderCellDef> Total Payed </th>
-        <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.totalPayed}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef> State </th>
-        <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.state}}</td>
+      <ng-container matColumnDef="ticket">
+        <th mat-header-cell *matHeaderCellDef> Ticket </th>
+        <td mat-cell *matCellDef="let onlineOrder"> {{onlineOrder.ticket}}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
