--- a/src/app/home/adviser/sale/sale.component.html
+++ b/src/app/home/adviser/sale/sale.component.html
@@ -1,1 +1,2 @@
 <app-adviser (add)="addArticle($event)" [articles]="saleArticles"></app-adviser>
+<p [hidden]="true">{{saleArticles[0].barcode}}</p>
