Validate quarter input #148

--- a/src/app/shop/provider-invoices/provider-invoices.component.html
+++ b/src/app/shop/provider-invoices/provider-invoices.component.html
@@ -9,7 +9,7 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <button (click)="calculateTotalTax()" mat-icon-button>
+    <button type="button" (click)="calculateTotalTax()" mat-icon-button>
       <mat-icon>search</mat-icon>
     </button>
     <mat-form-field>
